--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./The World Survivors.exe"
+export_path="exe/The World Survivors.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
